# ros-devcontainer-vscode

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  prompt.txt
workspace/: kill_three_drone_sim.sh  launch_three_drone_sim.sh
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/src/drone_demo/: CMakeLists.txt  how_to_perform_three_drone_demo.md  package.xml  simulation_how_to_perform_three_drone_demo.md
workspace/src/drone_demo/config/: mocap.yaml
workspace/src/drone_demo/include/drone_demo/: formation_control.hpp  multi_drone_controller.hpp
workspace/src/drone_demo/launch/: three_drone_mocap.launch
workspace/src/drone_demo/src/: apm_bridge.py  formation_control.cpp  multi_drone_controller.cpp  old.py
workspace_backup/.catkin_tools/profiles/default/: devel_collisions.txt
